Kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deepfakeshield
  labels:
    app.kubernetes.io/part-of: deepfakeshield
