Kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: deepfakeshield
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8000
      targetPort: http
