Kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: deepfakeshield
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
